Fix CORS configuration for Render deployment